Jan 28 - Fix to the overlapping of the Upload button and browse for files button.

--- a/CouponsForGiving/Content/style.css
+++ b/CouponsForGiving/Content/style.css
@@ -662,7 +662,7 @@ min-width: 20px;
 display: inline-block;
 margin: 20px 0px;
 padding: 1px;
-width: 67%;
+width: 39%;
 border: none;
 vertical-align: middle;
 font-size: 11px;
